--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <h1>Frequently Asked Questions</h1>
     <div class="faq-container">
-        <div class="faq active">
+        <div class="faq">
             <h3 class="faq-title">
                 Why shouldn't we trust atoms?
             </h3>
@@ -24,7 +24,7 @@
                 They make up everything.
             </p>
 
-            <button>
+            <button class="faq-toggle">
                 <i class="fas fa-chevron-down"></i>
                 <i class="fas fa-times"></i>
             </button>
@@ -39,7 +39,7 @@
                 Nobody knows.
             </p>
 
-            <button>
+            <button class="faq-toggle">
                 <i class="fas fa-chevron-down"></i>
                 <i class="fas fa-times"></i>
             </button>
@@ -54,7 +54,7 @@
                 inheritance
             </p>
 
-            <button>
+            <button class="faq-toggle">
                 <i class="fas fa-chevron-down"></i>
                 <i class="fas fa-times"></i>
             </button>
@@ -69,7 +69,7 @@
                 ten-tickles.
             </p>
 
-            <button>
+            <button class="faq-toggle">
                 <i class="fas fa-chevron-down"></i>
                 <i class="fas fa-times"></i>
             </button>
@@ -84,7 +84,7 @@
                 Depends on who are you asking.
             </p>
 
-            <button>
+            <button class="faq-toggle">
                 <i class="fas fa-chevron-down"></i>
                 <i class="fas fa-times"></i>
             </button>
